--- a/KaraokePayment/KaraokePayment/web.config
+++ b/KaraokePayment/KaraokePayment/web.config
@@ -12,5 +12,14 @@
       </aspNetCore>
     </system.webServer>
   </location>
+  <appSettings>
+    <!--VNPAY SETTINGS-->
+    <!--<add key="vnp_Url" value="http://localhost:2233/vpcpay.html"/>-->
+    <add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"/>
+    <add key="querydr" value="http://sandbox.vnpayment.vn/merchant_webapi/merchant.html"/>
+    <add key="vnp_TmnCode" value="W07Y4LVZ"/>
+    <add key="vnp_HashSecret" value="ZSYBCCKTUOMWNNESZMQBNCPKVDPFDOEK"/>
+    <add key="vnp_Returnurl" value="https://karaokepayment.local/ThanhToanKaraoke/ThanhToanPhongKaraoke"/>
+  </appSettings>
 </configuration>
 <!--ProjectGuid: b126396c-4d11-4cef-8411-534a6110766d-->
